third_party/move/move-compiler-v2/tests/checking/typing/borrow_field_from_non_struct.exp

Diagnostics:
error: type `integer` cannot be resolved as a struct
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:6:10
  │
6 │         &0.f;
  │          ^^^

error: type `integer` cannot be resolved as a struct
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:7:10
  │
7 │         &0.g;
  │          ^^^

error: type `u64` cannot be resolved as a struct
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:8:10
  │
8 │         &u.value;
  │          ^^^^^^^

error: type `bool` cannot be resolved as a struct
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:9:10
  │
9 │         &cond.value;
  │          ^^^^^^^^^^

error: type `address` cannot be resolved as a struct
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:10:10
   │
10 │         &addr.R;
   │          ^^^^^^

error: type `address` cannot be resolved as a struct
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:11:10
   │
11 │         &addr.f;
   │          ^^^^^^

error: type `()` cannot be resolved as a struct
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:12:10
   │
12 │         &().R;
   │          ^^^^

error: type `(&M::S, &M::S)` cannot be resolved as a struct
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:13:10
   │
13 │         &(&S{f: 0}, &S{f:0}).f;
   │          ^^^^^^^^^^^^^^^^^^^^^
